refactor(distributed-lock): Minor refactoring to avoid deprecated calls